--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,11 +5,6 @@
   padding: 0;
   column-gap: 30px;
 }
-/* .lead__button:first-child {
-  margin-right: 40px;
-}  */
-
-
 .section-about__wrapper {
   width: 100%;
   height: 100%;
@@ -33,7 +28,7 @@
 .section-about__wrapper_lead-images {
   margin-top: 400px;
 }
-.section-about__wrapper_lead-button {
+/* .section-about__wrapper_lead-button {
   width: 669px;
   height: 70px;
   display: flex;
@@ -43,8 +38,8 @@
   flex-direction: row;
   -moz-column-gap: 20px;
   column-gap: 20px;
-}
-.section-about__wrapper_lead-button--android {
+} */
+/* .section-about__wrapper_lead-button--android {
   width: 343px;
   height: 70px;
   display: flex;
@@ -57,21 +52,21 @@
   border-radius: 24px;
   background: linear-gradient(180deg, #28282C 0%, #000000 100%) black;
   color: white;
-}
-.section-about__wrapper_lead-button--iOs {
+} */
+/* .section-about__wrapper_lead-button--iOs {
   width: 343px;
   height: 70px;
   display: flex;
   flex-direction: row-reverse;
   -moz-column-gap: 10px;
-       column-gap: 10px;
+  column-gap: 10px;
   justify-content: center;
   align-items: center;
   filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
   border-radius: 24px;
   background: linear-gradient(180deg, #28282C 0%, #000000 100%) black;
   color: white;
-}
+} */
 
 .section-info {
   width: 100%;
@@ -248,11 +243,19 @@
     width: 90%;
     flex-direction: row-reverse;
     -moz-column-gap: 40px;
-         column-gap: 40px;
+    column-gap: 40px;
     margin-left: 70px;
   }
 }
 @media screen and (max-width: 376px) {
+    .lead__download-links-list {
+      flex-direction: column-reverse;
+      row-gap: 20px;
+      margin-top: 300px;
+      margin-left: 25px;
+      width: 271px;
+      height: 130px;
+    }
   .section-about__wrapper {
     grid-template-columns: auto;
     margin-right: 20px;
@@ -281,7 +284,7 @@
     width: 303px;
     height: 187px;
   }
-  .section-about__wrapper_lead-button {
+  /* .section-about__wrapper_lead-button {
     width: 271px;
     height: 130px;
     margin-top: 270px;
@@ -289,8 +292,8 @@
     justify-content: flex-start;
     flex-direction: column-reverse;
     row-gap: 20px;
-  }
-  .section-about__wrapper_lead-button--android {
+  } */
+  /* .section-about__wrapper_lead-button--android {
     width: 251px;
     height: 50px;
     color: white;
@@ -302,7 +305,7 @@
     height: 50px;
     font-size: 18px;
     line-height: 22px;
-  }
+  } */
   .section-info {
     margin-top: 100px;
     display: flex;
@@ -315,7 +318,7 @@
   .section-info__wrapper__block {
     flex-direction: column;
     -moz-column-gap: 40px;
-         column-gap: 40px;
+    column-gap: 40px;
     margin: 0 auto;
     padding: 0;
   }
@@ -327,7 +330,7 @@
     display: flex;
     flex-direction: row;
     -moz-column-gap: 40px;
-         column-gap: 40px;
+    column-gap: 40px;
     width: 290px;
     height: 268px;
   }
@@ -350,7 +353,7 @@
   .section-info__wrapper__block--reverse {
     flex-direction: column;
     -moz-column-gap: 20px;
-         column-gap: 20px;
+    column-gap: 20px;
     margin: 0 auto;
     padding: 0;
   }
