--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -122,6 +122,7 @@
   justify-content: space-between;
   padding: 65px 0 65px;
   margin: 0;
+  column-gap: 182px;
 }
 .apps__briefs-item:nth-child(odd) {
   flex-direction: row-reverse;
@@ -145,6 +146,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+
 }
 .apps__brief-image-wrapper {
   position: relative;
@@ -219,6 +221,70 @@
   }
 }
 @media screen and  (max-width: 768px) {
+  .apps__brief-text-container {
+    max-width: 400px;
+  }
+  .section__wrapper {
+    padding: 0 29px;
+}
+.apps__briefs {
+  padding: 64px 0 0 0;
+}
+  .apps__briefs-item {
+    padding: 50px 0 50px;
+    margin: 0;
+    column-gap: 40px;
+  }
+  .apps__subapps {
+    padding: 60px 0 0;
+  }
+  .apps__brief-image-wrapper {
+    margin-right: 23px;
+  }
+  .apps__subapps-wrapper {
+    width: 576px;
+  }
+  .apps__subapps-title {
+    margin: 0 0 25px 0;
+    font-size: 22px;
+    line-height: 26px;
+    font-weight: 600;
+}
+  .apps__subapps-list-item {
+    margin: 0 25px 0 0;
+  }
+  .lead__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .apps__lead-image {
+    width: 140px;
+} 
+  .apps__lead-text-container {
+    margin-top: 0px; 
+}
+.section__title {
+  font-size: 22px;
+    line-height: 26px;
+    font-weight: 600;
+}
+.apps__brief-text {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+}
+.apps__future {
+  padding: 78px 0 0;
+}
+}
+@media screen and  (max-width: 376px) {
 
+  .lead__download-links-list {
+    flex-direction: column-reverse;
+    row-gap: 20px;
+    margin-top: 300px;
+    margin-left: 25px;
+  
+  }
 
 }
