--- a/assets/css/landing-card.css
+++ b/assets/css/landing-card.css
@@ -1,9 +1,15 @@
+.section-card {
+	background: linear-gradient(180deg, #2E2E31 0%, #18181A 100%);
+	padding: 130px 0 ;
+}
+
 .card {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 	margin-left: 200px;
 	margin-top: -50px;
+
 }
 .card-block {
 	cursor: pointer;
@@ -38,9 +44,10 @@
 	margin: 10px auto;
 	border: none;
 	padding: 8px;
-	color: #ad1aaf;
-	background: rgba(255, 255, 255, 0.08);
-	border-radius: 3px;
+	color: #00A9DE;
+	background: rgba(0, 169, 222, 0.1);
+border-radius: 3px;
+
 }
 .card-3d {
 	perspective: 1000px;
