--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -10,18 +10,23 @@
 
 .lead__wrapper {
   margin: 0 180px;
-  background: linear-gradient(180deg, #28282C 0%, #000000 100%);
+  background: #28282C;
+  padding-top: 100px;
 }
+.lead__title-color {
+  color: #00A9DE;
+}
+
 .lead {
-  background: linear-gradient(180deg, #28282C 0%, #000000 100%);
-  padding: 0 0 120px 0;
+  background: #28282C;
+  padding: 0 0 100px 0;
 }
 .lead__content {
   display: flex;
-  column-gap: 150px;
+  column-gap: 280px;
   justify-content: center;
   align-items: center;
-  padding: 80px 0;
+  /* padding: 80px 0; */
 }
 .lead__content {
   display: flex;
@@ -36,23 +41,24 @@
   color:white;
 }
 .lead__title {
-  font-size: 72px;
-  line-height: 87px;
-  font-weight: 300;
-  margin:0 0 20px 0;
+  font-weight: 700;
+  font-size: 86px;
+  line-height: 104px;
+  margin: 0 0 50px 0;
   
 }
 .lead__subtitle {
-  font-size: 36px;
-  line-height: 43px;
-  font-weight: 200;
-  margin:0 0 100px 0;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 400;
+  margin:0 0 40px 0;
+  padding: 0;
 }
 .lead__slogan {
   font-size: 36px;
   line-height: 43px;
   font-weight: 600;
-  margin: 0 0 40px 0;
+  /* margin: 0 0 40px 0; */
 }
 
 .lead__images {
@@ -60,8 +66,49 @@
   column-gap: 26px;
 }
 .lead__image {
+  width: 230px;
+  height: 505px;
+}
+.description__wrapper {
+  margin: 0 200px;
+}
+.description__heading {
+  display: flex;
+  column-gap: 600px;
+  padding: 100px 0;
+}
+.description__list {
+  padding: 0;
+}
+.description__list__link {
+  font-size: 24px;
+  font-weight: 400;
+  line-height:29px;
+  list-style: none;
+  margin-bottom: 34px;
+}
+.description__list__link-color,
+.description__heading__as-color {
+  color: #00A9DE;
+  background: rgba(0, 169, 222, 0.1);
+  border-radius: 4px;
+}
+.description__heading__as {
+font-weight: 700;
+font-size: 32px;
+line-height: 39px;
+}
+.description__heading__as {
+  margin: 0 0 55px 0;
+}
+.description__list__link-icon {
+
+  justify-content: center;
+  margin-right: 40px;
+}
+.description__video{
   width: 300px;
-  height: 580px;
+
 }
 @media screen and  (max-width: 1440px) {
   .lead__wrapper {
